components/monitoring/prometheus/manifests/30-clusterrolebinding.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garden-prometheus
  namespace: (( values.namespace ))
  labels:
    app: monitoring
    role: prometheus
    context: garden
spec:
  ports:
  - name: metrics
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: monitoring
    role: prometheus
    context: garden
  sessionAffinity: None
  type: ClusterIP
