components/monitoring/prometheus/manifests/50-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garden-prometheus
  namespace: (( values.namespace ))
  labels:
    app: monitoring
    role: prometheus
    context: garden
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: garden-prometheus-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  rules:
  - host: (( values.settings.prometheus_domain ))
    http:
      paths:
      - backend:
          service:
            name: garden-prometheus
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - (( values.settings.prometheus_domain ))
    secretName: (( .imports.cert.export.certificate.secret_name ))
